<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.sonarttcn3</groupId>
	<artifactId>sonarqube-ttcn3-plugin</artifactId>
	<name>Sonarqube TTCN3 plugin</name>
	<version>0.0.14</version>
	<packaging>sonar-plugin</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.apiVersion>11.1.0.2693</sonar.apiVersion>
		<sonar.testingHarnessVersion>11.1.0.2693</sonar.testingHarnessVersion>
		<jdk.min.version>17</jdk.min.version>
		<sonar.sources>src/main/java,src/main/js</sonar.sources>
		<maven.compiler.source>17</maven.compiler.source>
     	<maven.compiler.target>17</maven.compiler.target>

		<sonar.pluginClass>org.eclipse.sonarttcn3.TitanPlugin</sonar.pluginClass>
		<sonar.pluginName>TTCN3</sonar.pluginName>
	</properties>

	<url>https://github.com/Magyarimiki/sonarqube-ttcn3-plugin</url>

	<issueManagement>
    	<system>Git</system>
    	<url>https://github.com/Magyarimiki/sonarqube-ttcn3-plugin/issues</url>
  	</issueManagement>

	<dependencies>
		<dependency>
			<groupId>org.sonarsource.api.plugin</groupId>
			<artifactId>sonar-plugin-api</artifactId>
			<version>${sonar.apiVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.20.0</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.titan</groupId>
			<artifactId>org.eclipse.titan.lsp</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>titan.language-server/target/generated-sources/annotations/TitanRules/</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
				<artifactId>sonar-packaging-maven-plugin</artifactId>
				<version>1.25.1.3002</version>
				<extensions>true</extensions>
				<configuration>
					<pluginKey>ttcn3</pluginKey>
					<pluginDescription>Sonar ttcn3</pluginDescription>
					<pluginClass>org.eclipse.sonarttcn3.TitanPlugin</pluginClass>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<executions>
					<execution>
						<configuration>
							<excludes>
								<exclude>titan.language-server/**</exclude>
							</excludes>
						</configuration>
						<id>compile-project</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>5.5.0.6356</version>
			</plugin>
		</plugins>
	</build>
</project>
